<resources>
    <string name="app_name">ESTRATEGIE</string>
    <string name="text_username">Email</string>
    <string name="usuariomail">Email</string>
    <string name="text_password">Password</string>
    <string name="ingreso_password">Enter your password</string>
    <string name="txt_botoningreso">Login</string>
    <string name="txt_botonregistro">Register</string>

    <string name="txt_nombre">Name</string>
    <string name="txt_apellido">Surname</string>
    <string name="txt_nitcedula">ID</string>
    <string name="txt_email">Email</string>
    <string name="txt_telefono">Cell phone</string>
    <string name="txt_clave">Password</string>
    <string name="txt_claverepetir">Repeat password</string>
    <string name="txt_politicas">Privacy policy</string>

    <string name="txt_nombrecompleto">Your full name</string>
    <string name="txt_apellidocompleto">His two surnames</string>

    <string name="txt_botonenviar">Send</string>

    <string name="txt_nombrebienvenida">Welcome</string>
    <string name="txt_informacion1">Select from the following list of jobs which you want to apply for</string>
    <string name="txt_trabajo1">Ticket sales</string>
    <string name="txt_atencioncliente">Customer Support</string>
    <string name="txt_callcenter">Call Center</string>
    <string name="txt_organizacionespacio">Sort spaces</string>

    <string name="txt_welcome">WELCOME</string>
    <string name="txt_welcomeinvalido">Invalid username or password</string>

    <string name="txt_titulobusqueda">Search</string>
    <string name="txt_preferencias">Settings</string>
    <string name="txt_salir">Logout</string>

    <string name="txt_botonflotante">Element Add</string>
    <string name="trabajo1Detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida felis eu venenatis efficitur. Duis a euismod erat. Mauris hendrerit tortor tellus, nec malesuada orci laoreet eget</string>

    <string name="errorpassword">Your password is wrong</string>
    <string name="errorusuario">Enter your username correctly</string>
    <string name="mensajeerror">YOU WERE WRONG WEY!!</string>
    <string name="mensajebienvenida">Welcome WEY!!</string>
    <string name="nombreusuario">"Name: "</string>
    <string name="mensajebtnflotante">Este es un mensaje del botón flotante</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lugar">Place: </string>
    <string name="hora">Time: </string>
    <string name="descripciontarea">Description:</string>
    <string name="txt_nombredesarrollador">Margarita Forero THE BEST</string>
    <string name="txt_botonregistroemail">REGISTRATION WITH YOUR EMAIL</string>
    <string name="bienvenidousuario">WELCOME</string>
    <string name="txt_loginemail">Login email</string>
    <string name="cerrarsesion">Close Session</string>

    <string name="prefs_file">com.example.nuevaestrategia.PREFERENCE_FILE_KEY</string>
    <string name="editartarea">Edit</string>
    <string name="olvidopassword">Forget Password</string>
    <string name="olvidopassword1">Forget your email</string>
    <string name="deletetarea">Delete</string>
    <string name="listproduc">Products List</string>
    <string name="text_nombreproducto">Product name:</string>
    <string name="text_precioproducto">Value:</string>
    <string name="text_descripcionproducto">Description:</string>
    <string name="or">or</string>
    <string name="tasktittle">Task Title:</string>
    <string name="time">Time:</string>
    <string name="todo">To DO</string>
    <string name="about">About</string>
    <string name="bienvenidoo">Welcome</string>
    <string name="productos">Products</string>

</resources>