<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".DetailFragment"
    android:background="@color/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="20dp"/>
    
        <TextView
            android:id="@+id/tvID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0" android:visibility="gone"
            />
        
        <TextView
            android:id="@+id/tarea1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/descripciontarea"
            android:textColor="@color/white"/>

         <TextView
            android:id="@+id/tarea2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/hora"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tarea3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/lugar"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/tarea4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/trabajo1Detail"
            android:autoSizeTextType="uniform"
            android:justificationMode="inter_word"
            android:textColor="@color/white"/>
    
    <Button
        android:id="@+id/btnEEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/editartarea"/>

    <Button
        android:id="@+id/btnDeletefd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/deletetarea"/>


</LinearLayout>