<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:id="@+id/authLayout"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/miMenu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        android:background="@color/btn_gral"
        android:elevation="4dp"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp">

        <ImageView
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logostrategie" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_username"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/stra_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:height="50dp"
            android:background="@color/white"
            android:hint="@string/usuariomail"
            android:textColor="@color/btn_gral"
            android:padding="1dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:paddingTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:textColor="@color/btn_gral"
            app:endIconMode="password_toggle"
            android:textSize="20sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/ingreso_password"
                android:inputType="textPassword"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnLogin"
            android:onClick="onLogin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/txt_botoningreso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/boton_redondo"/>

        <Button
            android:id="@+id/btnRegistre"
            android:onClick="onRegister"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/txt_botonregistro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/boton_redondo"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnemail"
            android:onClick="onRegisteremail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:text="@string/txt_botonregistroemail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/boton_redondo"/>

        <Button
            android:id="@+id/btnloginemail"
            android:onClick="onLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:text="@string/txt_loginemail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/boton_redondo"/>



    </LinearLayout>


</LinearLayout>

