<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/miMenu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        android:background="@color/btn_gral"
        android:elevation="4dp"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textprovedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:justificationMode="inter_word"
            android:text="@string/bienvenidousuario"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:justificationMode="inter_word"
            android:text="@string/nombreusuario"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trabajo1Detail"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:paddingTop="20dp"
            android:layout_marginBottom="25dp"
            android:justificationMode="inter_word"/>
        
        <Button
            android:id="@+id/buttonCerrar"
            android:onClick="onlogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerrarsesion"/>


    </LinearLayout>

</LinearLayout>

<com.google.android.material.floatingactionbutton.FloatingActionButton

android:id="@+id/btnFlotante"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="bottom|end"
android:layout_margin="16dp"
android:src="@android:drawable/ic_input_add"
app:backgroundTint="@color/white"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>