<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:background="@color/background"
    tools:context="ToDoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple_200"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:text="@string/txt_callcenter"/>
        
        <Button
            android:id="@+id/btn_detail_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text=">>"
            android:textColor="@color/white"/>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple_200"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:text="@string/txt_organizacionespacio"/>

        <Button
            android:id="@+id/btn_detail_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text=">>"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple_200"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:text="@string/txt_atencioncliente"/>

        <Button
            android:id="@+id/btn_detail_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text=">>"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple_200"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:text="@string/txt_trabajo1"/>

        <Button
            android:id="@+id/btn_detail_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text=">>"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>